--- a/app/globals.css
+++ b/app/globals.css
@@ -10,8 +10,8 @@
     /* --foreground: 222.2 84% 4.9%; */
     --foreground: 227.06deg 57.19% 10%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+    --card: 247 47.4% 57.19% 
+    --card-foreground: 227.06deg 57.19% 10%;
 
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
@@ -42,7 +42,7 @@
     /* --foreground: 210 40% 98%; */
     --foreground:  210 100% 96.77% / 90%;
 
-    --card: 222.2 84% 4.9%;
+    --card: 247.06deg 57.19% 10%;
     --card-foreground: 210 40% 98%;
 
     --popover: 222.2 84% 4.9%;
