can upload files and get their durations

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 @layer base {
   :root {
-    --background: 210 100% 96.77% / 90%;
+    --background: 210 100% 96.77%;
     /* --foreground: 222.2 84% 4.9%; */
     --foreground: 227.06deg 57.19% 10%;
 
